src/test/deca/syntax/invalid/sansobjet/lex_floatdec_valid.deca
// Test reconnaissance flottant ecrit en decimale
// Attendu:  pas d'erreur a chaque ligne est reconnu un flottant

1.0 
10.1 
100.21212 
10.1f 
100.21212f  
1.0F 
10.1F 
100.21212F 
1.1E11
1.1E11f
1.1E11F
1.0E-2 
2.34E-32 
2.34E+22 
1.0E-2f 
2.34E-32f 
2.34E+22f 
